add_subdirectory(Options)

set(AVR_GCC_COMPILER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/cmAvrGccCompiler.cxx
    ${AVR_GCC_COMPILER_OPTIONS_SOURCES}
    PARENT_SCOPE
)

set(AVR_GCC_COMPILER_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/cmAvrGccCompiler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/AbstractCompilerModel.h
    ${AVR_GCC_COMPILER_OPTIONS_HEADERS}
    PARENT_SCOPE
)
